--- a/_config.yml
+++ b/_config.yml
@@ -18,23 +18,22 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Ksenia Bestuzheva
+email: bestuzheva@zib.de
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  Mathematical Optimization Researcher at Zuse Institute Berlin
+logo: /assets/img/logo.png
+github_username:  kbestuzheva
+github.is_project_page: false
 
 # Build settings
-theme: minima
-remote_theme: pages-themes/cayman@v0.2.0
+#theme: jekyll-theme-cayman
+theme: jekyll-theme-minimal
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-feed
   - jekyll-remote-theme
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
