--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,3 +1,35 @@
+BestuzhevaChmielaMueller2023_GlobalOptimizationOfMixedInteger:
+  title: "Global Optimization of Mixed-Integer Nonlinear Programs with SCIP 8.0"
+  authors:
+  - first_name: Ksenia
+    last_name: Bestuzheva
+  - first_name: Antonia
+    last_name: Chmiela
+  - first_name: Benjamin
+    last_name: Müller
+  - first_name: Felipe
+    last_name: Serrano
+  - first_name: Stefan
+    last_name: Vigerske
+  - first_name: Fabian
+    last_name: Wegscheider
+  preprints:
+    ZIB-Report:
+      year: 2023
+      month: 01
+      number: 23-01
+      institution: zib
+      url: urn:nbn:de:0297-zib-89348
+    arxiv:
+      id: 2301.00587
+      subjects: math.OC
+      revisions:
+        - 02 Jan 2023
+  journals:
+    Journal of Global Optimization:
+      year: 2023
+      doi: 10.1007/s10898-023-01345-1
+
 BestuzhevaGleixnerVigerske2023:
   title: A Computational Study of Perspective Cuts
   authors:
@@ -138,34 +170,6 @@ BestuzhevaBesanconEtal2023:
         submitted: 2022-06-17
         accepted: 2023-02-02
         published: 2023-03-10
-
-BestuzhevaChmielaMueller2023_GlobalOptimizationOfMixedInteger:
-  title: "Global Optimization of Mixed-Integer Nonlinear Programs with SCIP 8.0"
-  authors:
-  - first_name: Ksenia
-    last_name: Bestuzheva
-  - first_name: Antonia
-    last_name: Chmiela
-  - first_name: Benjamin
-    last_name: Müller
-  - first_name: Felipe
-    last_name: Serrano
-  - first_name: Stefan
-    last_name: Vigerske
-  - first_name: Fabian
-    last_name: Wegscheider
-  preprints:
-    ZIB-Report:
-      year: 2023
-      month: 01
-      number: 23-01
-      institution: zib
-      url: urn:nbn:de:0297-zib-89348
-    arxiv:
-      id: 2301.00587
-      subjects: math.OC
-      revisions:
-        - 02 Jan 2023
 
 BestuzhevaGleixnerVoelker2022_StrengtheningSONC:
   title: Strengthening SONC Relaxations with Constraints Derived from Variable Bounds
